// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxCardImage customize 1`] = `
<div>
  <div
    class="card-image-bottom bazinga"
  />
</div>
`;

exports[`loads and displays CxCardImage component 1`] = `
<div>
  <img
    class="card-image"
  />
</div>
`;
